<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/author"
        android:text="@string/app_version"/>

    <TextView
        android:id="@+id/author"
        app:layout_constraintTop_toBottomOf="@+id/app_version"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"/>
    <TextView
        android:id="@+id/author_email"
        app:layout_constraintTop_toBottomOf="@+id/author"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"/>

    <TextView
        android:id="@+id/development_time"
        app:layout_constraintTop_toBottomOf="@+id/author_email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/development_time"/>

</androidx.constraintlayout.widget.ConstraintLayout>