<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_alignParentStart="true"
        android:layout_below="@id/grid"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <Button
        android:id="@+id/list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_list"
        android:layout_alignParentStart="true"/>
    <Button
        android:id="@+id/staggered_grid_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staggered_grid"
        android:layout_toEndOf="@+id/list_view"/>
    <Button
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grid"
        android:layout_toEndOf="@id/staggered_grid_view"/>
    <CheckBox
        android:id="@+id/viral_images_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_show_viral"
        android:checked="true"
        android:visibility="gone"
        android:layout_below="@id/grid"
        android:layout_alignParentEnd="true"
        />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/sort_management"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">
    <Spinner
        android:id="@+id/sort_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

    </Spinner>
    <Spinner
        android:layout_toEndOf="@+id/sort_spinner"
        android:id="@+id/window_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

    </Spinner>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>